feat: Config 허용 url 추가