@@ -49,8 +49,8 @@ public class SecurityConfig {
 		"/api/login/**",
 		"/api/join",
 		"/api/reissue",
-    "/api/clubs",
-    "/api/clubs/{clubId}",
+    	"/api/clubs",
+    	"/api/clubs/{clubId}",
 		"/"
 	};
 
@@ -75,7 +75,7 @@ public class SecurityConfig {
 					@Override
 					public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
 						CorsConfiguration configuration = new CorsConfiguration();
-						configuration.setAllowedOrigins(List.of("https://localhost:3000"));
+						configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173","https://localhost:3000"));
 						configuration.setAllowedMethods(Collections.singletonList("*"));
 						configuration.setAllowCredentials(true);
 						configuration.setAllowedHeaders(Collections.singletonList("*"));
